实现不完整的邮箱验证功能，增加Redis的配置
