# docs/swagger.json
@@ -9,9 +9,42 @@
     "host": "127.0.0.1:3000",
     "basePath": "/api/v1",
     "paths": {
-        "/sign": {
+        "/mail/verify": {
+            "get": {
+                "description": "验证码邮件发送接口",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Mail"
+                ],
+                "summary": "验证码邮件发送",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "用户令牌",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "0": {
+                        "description": "msg: \"Success",
+                        "schema": {
+                            "$ref": "#/definitions/serializer.UserPointsResponse"
+                        }
+                    },
+                    "30001": {
+                        "description": "msg: 参数错误",
+                        "schema": {
+                            "$ref": "#/definitions/serializer.Response"
+                        }
+                    }
+                }
+            },
             "post": {
-                "description": "用户信息更新接口",
+                "description": "验证邮件发送接口",
                 "consumes": [
                     "application/json"
                 ],
@@ -19,9 +52,53 @@
                     "application/json"
                 ],
                 "tags": [
-                    "User"
+                    "Mail"
                 ],
-                "summary": "用户信息更新",
+                "summary": "验证邮件发送",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "用户令牌",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "验证码",
+                        "name": "form",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/user.MailVerifyService"
+                        }
+                    }
+                ],
+                "responses": {
+                    "0": {
+                        "description": "msg: \"Success",
+                        "schema": {
+                            "$ref": "#/definitions/serializer.UserPointsResponse"
+                        }
+                    },
+                    "30001": {
+                        "description": "msg: 参数错误",
+                        "schema": {
+                            "$ref": "#/definitions/serializer.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/sign": {
+            "post": {
+                "description": "普通签到接口",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Points"
+                ],
+                "summary": "普通签到",
                 "parameters": [
                     {
                         "type": "string",
@@ -47,7 +124,7 @@
                             "$ref": "#/definitions/serializer.UserPointsResponse"
                         }
                     },
-                    "30001": {
+                    "60001": {
                         "description": "msg: 参数错误",
                         "schema": {
                             "$ref": "#/definitions/serializer.Response"
@@ -122,7 +199,7 @@
                             "$ref": "#/definitions/serializer.UserResponse"
                         }
                     },
-                    "50001": {
+                    "50000": {
                         "description": "msg: 查询个人信息错误",
                         "schema": {
                             "$ref": "#/definitions/serializer.Response"
@@ -324,6 +401,9 @@
                 "data": {
                     "type": "object"
                 },
+                "err": {
+                    "type": "string"
+                },
                 "msg": {
                     "type": "string"
                 }
@@ -375,6 +455,9 @@
                 },
                 "username": {
                     "type": "string"
+                },
+                "verify": {
+                    "type": "boolean"
                 }
             }
         },
@@ -409,6 +492,14 @@
                     "type": "string"
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "user.MailVerifyService": {
+            "type": "object",
+            "properties": {
+                "code": {
                     "type": "string"
                 }
             }
